[package]
name = "candle_llm_dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.2.2" }
hf-hub = "0.3.1"
rand = "0.8.5"
tokenizers = "0.14.0"
